parser/src/tests/corpus/negatives/bad-numlit/expected
Error 1/1: found 't', expected ' ' or '\n'
In source "negatives/bad-numlit/input", line 1:
  4ty-two
   ^
